--- a/reports/quarto_template.qmd
+++ b/reports/quarto_template.qmd
@@ -36,15 +36,17 @@ conflict_prefer("filter", "dplyr")
 ```
 
 ```{r}
-source(here("R/theme_layout.R"))
+source(here("R", "theme_layout.R"))
 ```
 
 # import data
 
 ```{r}
 
-raw_path <- here("data/raw/export_26195219/activities.csv")
-acts_raw <- read_csv(raw_path, show_col_types = FALSE)
+data_path <- here::here("data", "processed", "activities.csv")
+# raw_path <- here("data/raw/export_26195219/activities.csv")
+
+acts_raw <- read_csv(data_path, show_col_types = FALSE)
 
 # tmp <- names(acts_raw) %>%
 #   tibble(name = .) %>%
