--- a/reports/quarto_template.qmd
+++ b/reports/quarto_template.qmd
@@ -70,14 +70,28 @@ df_minimal <- acts_raw %>%
 
 
 ```{r}
-# df_minimal <- acts_raw %>% 
-#   select(c("Activity ID", "Activity Date", "Activity Type", "Elapsed Time...6", "Moving Time", "Distance...7")) %>% 
-#   rename(
-#     "Elapsed Time" = "Elapsed Time...6",
-#     "Distance" = "Distance...7"
-#   ) %>% 
-#   clean_names()
+# combine sport activites into groups
+df_minimal <- df_minimal %>% 
+  mutate(
+    activity_type = case_when(
+      activity_type %in% c("Run", "TrailRun", "Hike") ~ "Running",
+      activity_type %in% c("Ride", "GravelRide") ~ "Cycling",
+      activity_type %in% c("WeightTraining", "Workout") ~ "Strength",
+      activity_type == "Swim" ~ "Swimming",
+      TRUE ~ activity_type
+    )
+  )
+
+ # filter for activities with at least 10 recordings
+
+activities <- df_minimal %>% 
+  group_by(activity_type) %>% 
+  summarise(number= n()) %>% 
+  filter(number>10) %>% 
+  pull(activity_type)
+
 ```
+
 
 ```{r}
 
@@ -93,14 +107,13 @@ df_minimal <- df_minimal %>%
   ) %>% 
   group_by(year, month, activity_type) %>% 
   mutate(moving_time_hr = as.numeric(moving_time) / 3600) %>% 
-  filter(activity_type %in% c("Run", "Ride"))
+  filter(activity_type %in% activities) # filter for activities with at least 10 recordings
 ```
 
 ```{r}
-
-cols <- c(
-  Run = viridis(3)[1],
-  Ride = viridis(3)[2]
+cols <- setNames(
+  viridis::viridis(length(activities)),
+  activities
 )
 
 plotting_geom_cont <- function(dat, x_var = "month", y_var, color) {
@@ -188,6 +201,7 @@ add_rolling_metrics <- function(df, col_name, smooth = FALSE, smooth_span = 0.1)
 
 # Use it
 df_minimal_ma <- df_minimal %>%
+  mutate(distance = distance / 1000) %>% 
   add_rolling_metrics("distance", smooth = TRUE, smooth_span = 0.05) %>%
   add_rolling_metrics("moving_time_hr", smooth = TRUE, smooth_span = 0.05)
 
@@ -204,9 +218,12 @@ plotting_overview <- function(df, x_var, y_var, show_smoothed = TRUE){
   ma_7d_sum_col <- paste0(y_var, "_sum_7d")
   ma_30d_sum_col <- paste0(y_var, "_sum_30d")
   ma_60d_sum_col <- paste0(y_var, "_sum_60d")
+  
+  linewidth_var <- 0.5
+  alpha_var <- 0.7
 
   
-  plots_dist_cont <- df %>%
+  plots_activity <- df %>%
     split(.$activity_type) %>%
     map(function(data) {
       p <- plotting_geom_cont(data, x_var = x_var, y_var = y_var, color = cols) + 
@@ -216,26 +233,26 @@ plotting_overview <- function(df, x_var, y_var, show_smoothed = TRUE){
       if (show_smoothed && ma_7d_col %in% names(data)) {
         p <- p +
           geom_line(aes(y = .data[[ma_7d_col]]),
-                    color = "grey40", linewidth = 1, alpha = 0.7)
+                    color = "grey40", linewidth = 1, alpha = alpha_var)
         }
       return(p)
     })
   
-  plots_summary_dist_cont <- df %>% 
+  plots_sum <- df %>% 
       split(.$activity_type) %>%
     map(function(data) {
       plotting_geom_cont(data, x_var = x_var, y_var = y_var, color = cols) + 
       geom_line(
         aes(y = .data[[ma_7d_sum_col]] / 7, colour = "7d"),
-        linewidth = 1, alpha = 0.7
+        linewidth = linewidth_var, alpha = alpha_var
         ) +
         geom_line(
           aes(y = .data[[ma_30d_sum_col]] / 30, colour = "30d"),
-          linewidth = 1, alpha = 0.7
+          linewidth = linewidth_var, alpha = alpha_var
         ) +
         geom_line(
           aes(y = .data[[ma_60d_sum_col]] / 60, colour = "60d"),
-          linewidth = 1, alpha = 0.7
+          linewidth = linewidth_var, alpha = alpha_var
         ) +
       scale_colour_manual(
       name   = "Moving average / day",
@@ -248,45 +265,122 @@ plotting_overview <- function(df, x_var, y_var, show_smoothed = TRUE){
       ) 
       })
   
-  plot_summary <- wrap_plots(
-    plots_dist_cont$Ride,
-    plots_summary_dist_cont$Ride,
-    plots_dist_cont$Run,
-    plots_summary_dist_cont$Run,
-    nrow = 2
+  return(list(
+    plots_activity = plots_activity,
+    plots_sum = plots_sum
   )
-  
-  return(plot_summary)
+  )
 }
 
 # Usage
-plot_summary_dist <- plotting_overview(
-  df_minimal_ma %>% filter(date >= today() - days(180)), 
+## distance
+plots_180_dist <- plotting_overview(
+  df_minimal_ma %>% filter(
+    date >= today() - days(180),
+    !activity_type %in% "Strength" # remove strength for distance plots
+    ),
   x_var = "date", 
   y_var = "distance"
-) & labs(y="km")
+) 
 
-plot_summary_dist
+plots_720_dist <- plotting_overview(
+ df_minimal_ma %>% filter(
+    date >= today() - days(720),
+    !activity_type %in% "Strength" # remove strength for distance plots
+    ),
+  x_var = "date", 
+  y_var = "distance"
+) 
 
-
-plot_summary_time <- plotting_overview(
-  df_minimal_ma %>% filter(date >= today() - days(180)), 
+## time
+plots_180_time <- plotting_overview(
+  df_minimal_ma %>% filter(date >= today() - days(180)),
   x_var = "date", 
   y_var = "moving_time_hr"
-) & labs(y="hours")
+) 
 
-plot_summary_time
+plots_720_time <- plotting_overview(
+  df_minimal_ma %>% filter(date >= today() - days(720)),
+  x_var = "date", 
+  y_var = "moving_time_hr"
+) 
+
 ```
+
+
+```{r, fig.height=30/2.54}
+wrapping_plots <- function(plots_180, plots_720) {
+  
+  activities <- names(plots_720$plots_activity)
+
+  # Extract all plots for each activity and flatten into a single list
+  plots_to_wrap <- unlist(
+    lapply(activities, function(act) {
+      list(
+        plots_720$plots_activity[[act]],
+        plots_720$plots_sum[[act]],
+        plots_180$plots_activity[[act]],
+        plots_180$plots_sum[[act]]
+      )
+    }),
+    recursive = FALSE
+  )
+  
+  # Calculate total number of plots per activity (should be 4 in this case)
+  n_plots_per_activity <- length(plots_720) + length(plots_180)
+  
+  # Create layout design for all activities
+  # Each activity gets: AA, BB, CD (where AA and BB span full width, CD is split)
+  designs <- lapply(seq_along(activities), function(i) {
+    # Calculate letter offset: Activity 1 starts at A, Activity 2 at E, etc.
+    offset <- (i - 1) * n_plots_per_activity  # offset: Shifts letters for each activity (0 for first, 4 for second, etc.)
+    
+    # Create full-width rows for the first (n_plots_per_activity - 2) plots
+    # E.g., "AA", "BB" for plots 1 and 2
+    full_width_rows <- sapply(1:(n_plots_per_activity - 2), function(j) {
+      letter <- LETTERS[j + offset]
+      paste0(letter, letter)
+    })
+    
+    # Create split row for the last 2 plots (e.g., "CD")
+    split_row <- paste0(
+      LETTERS[n_plots_per_activity - 1 + offset],
+      LETTERS[n_plots_per_activity + offset]
+    )
+    
+    c(full_width_rows, split_row)
+  })
+  
+  # Combine all designs into a single string with newlines
+  design <- paste(unlist(designs), collapse = "\n")
+  
+  wrap_plots(plots_to_wrap, design = design)
+}
+
+plot_summary_dist <- wrapping_plots(plots_180_dist, plots_720_dist) & labs(y="km") & theme(axis.title.x = element_blank())
+plot_summary_time <- wrapping_plots(plots_180_time, plots_720_time) & labs(y="hours") & theme(axis.title.x = element_blank())
+
+```
+
+
 ```{r}
 dir.create("figures", recursive = TRUE, showWarnings = FALSE)
 
 ggsave(
   "figures/weekly_distance.pdf",
   plot = plot_summary_dist,
-  width = 21,
-  height = 14,
+  width = 30,
+  height = 15*length(activities),
+  units = "cm",
+  device = cairo_pdf
+)
+
+ggsave(
+  "figures/weekly_time.pdf",
+  plot = plot_summary_time,
+  width = 30,
+  height = 15*length(activities),
   units = "cm",
   device = cairo_pdf
 )
 ```
-
