--- a/reports/quarto_template.qmd
+++ b/reports/quarto_template.qmd
@@ -25,6 +25,7 @@ library(hms)
 library(janitor)
 library(slider)
 library(scales)
+library(ggrepel)
 
 # set filter preference
 library(conflicted)
@@ -537,7 +538,7 @@ ggsave(
   limitsize = FALSE
 )
 ```
-
+git
 
 
 
